--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,11 +1,9 @@
 name: Waka Readme
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+  schedule:
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
 jobs:
   update-readme:
     name: Update Readme with Metrics
@@ -15,3 +13,5 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_LINES_OF_CODE : "true"
+          SHOW_PROFILE_VIEWS : "false"  
