--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
   schedule:
     # Runs at 12am IST
-    - cron: '30 18 * * *'
+    - cron: '10 * * * *'
 jobs:
   update-readme:
     name: Update Readme with Metrics
