--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
   schedule:
     # Runs at 12am IST
-    - cron: '30 18 * * *'
+    - cron: "30 18 * * *"
 jobs:
   update-readme:
     name: Update Readme with Metrics
@@ -13,5 +13,6 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LINES_OF_CODE : "true"
-          SHOW_PROFILE_VIEWS : "false"  
+          SHOW_LINES_OF_CODE: "true"
+          SHOW_PROFILE_VIEWS: "true"
+          SHOW_COMMIT: "true"
